--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <p>#GGnation</p>
       </div>
       <nav class="top-menu">
-        <ul><em>
+        <ul>
           <li><a class="current-page-link" href="index.html">homepage</a></li>
           <li><a href="biography.html">biography</a></li>
-          <li><a href="sports.html">sports</a></li></em>
+          <li><a href="sports.html">sports</a></li>
         </ul>
       </nav>
     </div>
     <div class="page-content">
       <div class="main-section">
         <h1>Presentation of the website</h1>
-        <p class="intropara"><strong>This website goal is to share any news about uOttawa sports teams.</p>
-        <p class="intropara2">The second goal is as important as the first and it's to show some support to ours teams.</strong></p>
+        <p class="intropara"><strong>This website goal is to share any news about uOttawa sports teams.</strong></p>
+        <p class="intropara2"><strong> second goal is as important as the first and it's to show some support to ours teams.</strong></p>
         <p>Let's go Gee-Gees</p>
 
         <h2>Why did I create the website</h2>
