--- a/biography.html
+++ b/biography.html
@@ -23,7 +23,7 @@
       <div class="main-section">
         <h1>My story</h1>
         <figure>
-          <img src="images/ma photo.JPG" alt="Photo of the website creator">
+          <img src="ma photo.JPG" alt="Photo of the website creator">
           <figcaption>Photo of me, the website creator, at the NASA in Florida wearing a multicolored NASA sweater. Photo: Geraldine Bahaban</figcaption>
         </figure>
         <h2>Basic information about me</h2>
@@ -32,12 +32,12 @@
           <h2>My hobbies</h2>
         <p>I love basketball, I play it since I'm 5 years old. Due to that, I spent a considerable amount of time in Langon, the city of my basketball club. 
           When I grew older I basically lived in the gym during saturdays. I did it because I had my games with my team but also because I began to referee games for my club, something I found really enjoyable and continue to do, here, at the university each monday, tuesday and wednesday nights.
-          <br/><br/>
+          <br><br>
            I also love reading since I learnt to do it, my first "big" readings is <abbr title="Harry Potter">HP</abbr> when I was in primary school. 
            I really enjoy fictional books the most but I sometimes read other style of books like, for exemple, the books of Agatha Christie. 
            I would say that my favorite reading is <em>Eragon</em> of Cristopher Paolini. I really admire this author because he wrote his first book really young. 
            Aside from him, I also like Rick Riordan's books. His books, while fictional, help me learn abouth mythology and develop a passion about the myths. </p>
-           <br/>
+           <br>
            <p>You can find more of my work on :</p>
            <ul>
            <li><a href="https://github.com/MaxenceB33" target="_blank">My GitHub account</a></li>
@@ -45,7 +45,7 @@
           </ul>
           
 
-          </ul>
+          
            <p><strong>That is all about me. I hope you enjoy my website.</strong></p>
       </div>
     </div>
