--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            That's why I wanted to create a website about them and here we are. 
            I hope that this website could become in the future a sharing place about ours sports teams, maybe even expend it to cover for intramuros leagues.  </p>
         <figure>
-          <img src="images/gee-gees symbol.png" alt="symbol of the Gee-Gees">
+          <img src="gee-gees symbol.png" alt="symbol of the Gee-Gees">
           <figcaption>This is the symbol of the Gee-Gees, a white horse with the letters GG on a garnet background. Photo: Maxence Bahaban</figcaption>
         </figure>
         <p>
@@ -52,7 +52,7 @@
         <blockquote cite="https://teams.geegees.ca/clubs/news">Founded in 1848, the University of Ottawa adopted Garnet and Grey as its official colours and like many nineteenth-century institutions the school's teams were initially known only by the colours.
            Eventually, a connection was made between the shorthand "GG" and "Gee-Gee", the common British nickname for a racehorse. 
            The unique Gee-Gees name and iconic logo known today is a result of over 170 years of history in Ottawa. </blockquote>
-       <br/>
+       <br>
        <ol>
         <li><a href="https://en.wikipedia.org/wiki/Ottawa_Gee-Gees" target="_blank">Gee-Gees wikipedia information</a></li>
         <li><a href="https://teams.geegees.ca/landing/index" target="_blank">Gee-Gees'website</a></li>
