--- a/biography.html
+++ b/biography.html
@@ -13,9 +13,9 @@
       </div>
       <nav class="top-menu">
         <ul>
-          <em><li><a href="index.html">homepage</a></li>
+          <li><a href="index.html">homepage</a></li>
           <li><a class="current-page-link" href="biography.html">biography</a></li>
-          <li><a href="sports.html">sports</a></li></em>
+          <li><a href="sports.html">sports</a></li>
         </ul>
       </nav>
     </div>
