--- a/biography.html
+++ b/biography.html
@@ -23,7 +23,7 @@
       <div class="main-section">
         <h1>My story</h1>
         <figure>
-          <img src="ma photo.JPG" alt="Photo of the website creator">
+          <img src="images/maphoto.jpg" alt="Photo of the website creator">
           <figcaption>Photo of me, the website creator, at the NASA in Florida wearing a multicolored NASA sweater. Photo: Geraldine Bahaban</figcaption>
         </figure>
         <h2>Basic information about me</h2>
