--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            That's why I wanted to create a website about them and here we are. 
            I hope that this website could become in the future a sharing place about ours sports teams, maybe even expend it to cover for intramuros leagues.  </p>
         <figure>
-          <img src="gee-gees symbol.png" alt="symbol of the Gee-Gees">
+          <img src="images/geegeessymbol.png" alt="symbol of the Gee-Gees">
           <figcaption>This is the symbol of the Gee-Gees, a white horse with the letters GG on a garnet background. Photo: Maxence Bahaban</figcaption>
         </figure>
         <p>
