--- a/sports.html
+++ b/sports.html
@@ -12,10 +12,10 @@
         <p>Sports news</p>
       </div>
       <nav class="top-menu">
-        <ul><em>
+        <ul>
           <li><a href="index.html">homepage</a></li>
           <li><a href="biography.html">biography</a></li>
-          <li><a class="current-page-link" href="sports.html">sports</a></li></em>
+          <li><a class="current-page-link" href="sports.html">sports</a></li>
         </ul>
       </nav>
     </div>
